# pico-dirtyJtag

./: CMakeLists.txt  dirtyJtag.c  dirtyJtag_cmd.c  pio_jtag.c  usb_descriptors.c
include/: dirtyJtag.h  pio_jtag.h
